--- a/admin-ui/src/assets/config.json
+++ b/admin-ui/src/assets/config.json
@@ -1,10 +1,10 @@
 {
-    "primaryLangCode": "eng",
-    "secondaryLangCode": "ara",
-    "baseUrl": "https://dev.mosip.net/v1/",
-    "adminUrl":"/admin-ui/",
-    "templateRepoUrl":"/admin-ui/templates/",
-    "validateToken": "admin/authorize/admin/validateToken",
-    "login": "admin/login/",
-    "logout": "admin/logout/user"
-} 
+  "primaryLangCode": "eng",
+  "secondaryLangCode": "ara",
+  "baseUrl": "https://api-internal.techno-associates.live/v1/",
+  "adminUrl": "/admin-ui/",
+  "templateRepoUrl": "/admin-ui/templates/",
+  "validateToken": "admin/authorize/admin/validateToken",
+  "login": "admin/login/",
+  "logout": "admin/logout/user"
+}
