MOSIP-23157:Added the code and property to throw an error message as per the configured date range

--- a/admin-ui/src/assets/config.json
+++ b/admin-ui/src/assets/config.json
@@ -6,5 +6,6 @@
     "templateRepoUrl":"/admin-ui/templates/",
     "validateToken": "admin/authorize/admin/validateToken",
     "login": "admin/login/",
-    "logout": "admin/logout/user"
+    "logout": "admin/logout/user",
+    "max-registration-date-filter-interval": "25"
 } 
