--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -47,6 +47,7 @@ jobs:
       - name: Setup the settings file for ossrh server
         run: echo "<settings>   <servers>    <server>       <id>ossrh</id>     </server>    </servers>   <profiles>     <profile>       <id>ossrh</id>       <activation>         <activeByDefault>true</activeByDefault>       </activation>         </profile>   <profile>      <id>allow-snapshots</id>         <activation><activeByDefault>true</activeByDefault></activation>      <repositories>        <repository>          <id>snapshots-repo</id>          <url>https://oss.sonatype.org/content/repositories/snapshots</url>          <releases><enabled>false</enabled></releases>          <snapshots><enabled>true</enabled></snapshots>        </repository>          <repository>          <id>releases-repo</id>          <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>          <releases><enabled>false</enabled></releases>          <snapshots><enabled>false</enabled></snapshots>        </repository>       </repositories>    </profile>    </profiles> </settings> " > $GITHUB_WORKSPACE/settings.xml
 
+
       - name: Build mosip-packet-creator with Maven
         run: |
           cd ./${{env.SERVICE_LOCATION}}
@@ -149,4 +150,10 @@ jobs:
           docker tag $SERVICE_NAME $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
 
-  
+      - uses: 8398a7/action-slack@v3
+        with:
+          status: ${{ job.status }}
+          fields: repo,message,commit,workflow,job # selectable (default: repo,message)
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_DEVOPS_WEBHOOK }} # required
+        if: failure() # Pick up events even if the job fails or is canceled.
