--- a/.github/workflows/push_trigger.yml
+++ b/.github/workflows/push_trigger.yml
@@ -14,8 +14,9 @@ jobs:
   maven-build-admintest:
     runs-on: ubuntu-latest
     env:
+      SERVICE_NAME: admintest
       SERVICE_LOCATION: ./admintest
-      CONFIG_LOCATION: 
+      CONFIG_LOCATION: ./admintest/src/main/resources/
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
@@ -57,20 +58,15 @@ jobs:
         run: |
           cd ./${{env.SERVICE_LOCATION}}
           mkdir -p build_files/config
-          cp $( find -name 'dslrig-packetcreator-*.jar' -type f ) build_files
-          cp -r ${{env.CONFIG_LOCATION}}/Biometric\ Devices build_files/Biometric\ Devices
-          #cp -r ${{env.CONFIG_LOCATION}}/config build_files/config
-          cp -r src/main/resources/application.properties build_files/config/
-          cp -r ${{env.CONFIG_LOCATION}}/resource build_files/resource
-          cp -r ${{env.CONFIG_LOCATION}}/application.properties build_files/application.properties
-          cp -r ./src/main/resources/dockersupport/centralized/mountvolume/profile_resource ./profile_resource
-          zip -r release.zip build_files/* profile_resource
+          cp $( find -name 'automationtests-*-jar-with-dependencies.jar' -type f ) build_files
+          cp -r ${{env.CONFIG_LOCATION}} build_files/
+          zip -r ${{env.SERVICE_NAME}}.zip build_files/* 
 
       - name: Upload the springboot jars
         uses: actions/upload-artifact@v1
         with:
-          name: release
-          path: ./${{env.SERVICE_LOCATION}}/release.zip
+          name: ${{env.SERVICE_NAME}}
+          path: ./${{env.SERVICE_LOCATION}}/${{env.SERVICE_NAME}}.zip
 
       - uses: 8398a7/action-slack@v3
         with:
@@ -93,7 +89,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/download-artifact@v1
         with:
-          name: release
+          name: ${{env.SERVICE_NAME}}
           path: ./${{env.SERVICE_LOCATION}}
 
       - name: Setup branch name
@@ -109,10 +105,10 @@ jobs:
           xml-file: ./${{ env.SERVICE_LOCATION }}/pom.xml
           xpath: /*[local-name()="project"]/*[local-name()="version"]
 
-      - name:  Extract the mosip-packet-creator jar and its dependency configs
+      - name:  Extract the admintest jar and its dependency configs
         run: |
           cd  ./${{env.SERVICE_LOCATION}} 
-          unzip "release.zip"
+          unzip "${{env.SERVICE_NAME}}.zip"
 
       - name: Get current date
         id: date
@@ -124,7 +120,6 @@ jobs:
           mkdir docker-image-build
           cp -r ./build_files ./docker-image-build/build_files
           cp -r ./entrypoint.sh ./docker-image-build/entrypoint.sh
-          cp -r ./profile_resource ./docker-image-build/profile_resource
           cp ./Dockerfile  ./docker-image-build/Dockerfile
           
           cd docker-image-build
