--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -7,7 +7,11 @@ on:
     types: [opened]
   push:
     branches:
+      - MOSIP*
+      - 1.*
       - '!release-branch'
+      - develop
+      - master
       - '*'
 
 jobs:
